# ownscribe

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: build-binary.yml  ci.yml  publish.yml
src/notetaker/: cli.py  config.py  pipeline.py
src/notetaker/audio/: coreaudio.py  sounddevice_recorder.py
src/notetaker/output/: json_output.py  markdown.py
src/notetaker/summarization/: base.py  ollama_summarizer.py  openai_summarizer.py  prompts.py
src/notetaker/transcription/: base.py  whisperx_transcriber.py
src/ownscribe/: cli.py  config.py  pipeline.py  progress.py  search.py
src/ownscribe/audio/: base.py  coreaudio.py  sounddevice_recorder.py
src/ownscribe/summarization/: __init__.py  base.py  ollama_summarizer.py  openai_summarizer.py  prompts.py
src/ownscribe/transcription/: base.py  whisperx_transcriber.py
swift/: Package.swift  build.sh
swift/Sources/: AudioCapture.swift
tests/: conftest.py  test_cli.py  test_config.py  test_json_output.py  test_markdown.py  test_models.py  test_mute.py  test_pipeline.py  test_prompts.py  test_search.py  test_summarization.py  test_transcription.py
