[project]
name = "ownscribe"
version = "0.1.0"
description = "Fully local meeting transcription and summarization CLI"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Pascal Berrang", email = "git@p4l.dev" }
]
requires-python = ">=3.12"
keywords = ["meeting", "transcription", "summarization", "whisper", "local", "privacy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "click>=8.1",
    "sounddevice>=0.5",
    "soundfile>=0.13",
    "ollama>=0.4",
    "openai>=1.0",
    "whisperx>=3.7",
]

[project.urls]
Homepage = "https://github.com/paberr/ownscribe"
Repository = "https://github.com/paberr/ownscribe"
Issues = "https://github.com/paberr/ownscribe/issues"

[project.scripts]
ownscribe = "ownscribe.cli:cli"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-httpserver>=1.1",
    "ruff>=0.9",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
markers = [
    "macos: tests that require macOS",
    "hardware: tests that require audio hardware",
    "slow: slow-running tests",
]
